--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest skeleton",
+  "name": "nest-skeleton",
   "version": "1.0.0",
   "description": "nest skeleton",
   "license": "MIT",
