--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nest-skeleton",
   "version": "1.0.0",
   "description": "nest skeleton",
-  "license": "MIT",
+  "private": true,
   "scripts": {
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "nodemon",
