--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/core": "^4.5.10",
     "@nestjs/microservices": "^4.5.8",
     "@nestjs/websockets": "^4.5.8",
+    "cors": "^2.8.4",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "typescript": "^2.6.2"
